--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -354,7 +354,7 @@ command.rebuild = Reconstruire
 command.assist = Assister
 command.move = Bouger
 command.boost = Booster
-command.loadUnits = Transporter Unitées
+command.loadUnits = Transporter Unités
 command.loadBlocks = Transporter Blocs
 command.unloadPayload = Poser Chargement
 stance.stop = Annuler les Ordres
