--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -754,7 +754,7 @@ sector.lost = Secteur [accent]{0}[white] perdu !
 #note: l'espace manquant dans la ligne ci-dessous est intentionnel
 sector.captured = Secteur [accent]{0}[white]capturé !
 sector.changeicon = Changer l'Icône
-sector.noswitch.title = Impossible de changer de secteur
+sector.noswitch.title = Impossible de changer de Secteur
 sector.noswitch = Vous ne pouvez pas changer de secteur pendant qu’un autre est attaqué.\n\nSecteur: [accent]{0}[] sur [accent]{1}[]
 sector.view = Voir le secteur
 
