--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -828,7 +828,7 @@ sector.origin.name = Origin
 
 sector.onset.description = Le secteur de tutoriel. Cet objectif n'a pas encore été créé. Attendez pour des informations futures.
 sector.aegis.description = L'ennemi est protégé par des boucliers. Un module expérimental de briseur de bouclier a été détecté dans ce secteur.\nLocalisez cette structure, approvisionnez-la avec des munitions de tungstène et détruisez la base ennemie.
-sector.lake.description = Le lac de scories du secteur limite les unités utilisables. Les troupes volantes sont la seule option.\nRecherchez le [accent]fabricateur de vaisseaux[] et produisez un [accent]Elude[] aussi tôt que possible.
+sector.lake.description = Le lac de scories du secteur limite les unités utilisables. Les troupes volantes sont la seule option.\nRecherchez le [accent]fabricateur de vaisseaux[] et produisez un [accent]elude[] aussi tôt que possible.
 sector.intersect.description = Les scans montrent que ce secteur sera attaqué sur plusieurs côtés après l'atterrissage.\nConstruisez et développez vos défenses aussi vite que possible.\nLes [accent]Mécas[] seront requis pour le terrain accidenté de ce secteur.
 sector.atlas.description = Ce secteur contient des terrains variés et requiert des unités toutes aussi variées pour attaquer efficacement.\nDes unités améliorées peuvent également être nécessaires afin de détruire les bases ennemies les plus difficiles.\nRecherchez l'[accent]électrolyseur[] et le [accent]refabricateur de tanks[].
 sector.split.description = La présence faible de l'ennemi dans ce secteur le rend parfait pour tester de nouvelles technologies de transport.
