--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -1129,8 +1129,8 @@ setting.atmosphere.name = Montrer l'Atmosphère des planètes
 setting.drawlight.name = Dessiner les Ombres/Lumières
 setting.ambientvol.name = Volume Ambiant
 setting.mutemusic.name = Couper la Musique
-setting.sfxvol.name = Volume des Sons et des Effets
-setting.mutesound.name = Couper les Sons et les Effets
+setting.sfxvol.name = Volume des Sons et Effets
+setting.mutesound.name = Couper les Sons et Effets
 setting.crashreport.name = Envoyer des Rapports de crash anonymes
 setting.savecreate.name = Sauvegardes Automatiques
 setting.publichost.name = Visibilité de la Partie publique
