--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -1980,14 +1980,14 @@ block.spore-press.description = Compresse des spores pour synthétiser du pétro
 block.pulverizer.description = Écrase la ferraille pour en faire du sable. Utile quand il y a un manque de sable naturel.
 block.coal-centrifuge.description = Solidifie le pétrole en blocs de charbon.
 block.incinerator.description = Incinère ou vaporise n'importe quel objet ou liquide qu'il reçoit.
-block.power-void.description = Absorbe toute l'énergie qui va à l'intérieur. (Bac à sable uniquement)
-block.power-source.description = Produit de l'énergie à l'infini. (Bac à sable uniquement)
-block.item-source.description = Produit des objets à l'infini. (Bac à sable uniquement)
-block.item-void.description = Détruit les objets introduits. (Bac à sable uniquement)
-block.liquid-source.description = Source de liquide infinie. (Bac à sable uniquement)
-block.liquid-void.description = Détruit les liquides introduits. (Bac à sable uniquement)
-block.payload-source.description = Produit des charges utiles à l'infini. (Bac à sable uniquement)
-block.payload-void.description = Détruit toutes les charges utiles. (Bac à sable uniquement)
+block.power-void.description = Absorbe toute l'énergie qui va à l'intérieur. Bac à sable uniquement.
+block.power-source.description = Produit de l'énergie à l'infini. Bac à sable uniquement.
+block.item-source.description = Produit des objets à l'infini. Bac à sable uniquement.
+block.item-void.description = Détruit les objets introduits. Bac à sable uniquement.
+block.liquid-source.description = Source de liquide infinie. Bac à sable uniquement.
+block.liquid-void.description = Détruit les liquides introduits. Bac à sable uniquement.
+block.payload-source.description = Produit des charges utiles à l'infini. Bac à sable uniquement.
+block.payload-void.description = Détruit toutes les charges utiles. Bac à sable uniquement.
 block.copper-wall.description = Un bloc défensif à faible coût.\nUtile pour protéger la base et les tourelles lors des premières vagues.
 block.copper-wall-large.description = Un bloc défensif à faible coût.\nUtile pour protéger la base et les tourelles lors des premières vagues.
 block.titanium-wall.description = Un bloc défensif standard.\nProcure une protection modérée contre les attaques ennemies.
