--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -1654,7 +1654,7 @@ block.payload-loader.description = Charge les liquides et les ressources dans le
 block.payload-unloader.name = Déchargeur de charge utile
 block.payload-unloader.description = Décharge les liquides et les ressources des blocs.
 block.heat-source.name = Source de Chaleur
-block.heat-source.description = Produit de grandes quantités de chaleur. (Bac à sable uniquement)
+block.heat-source.description = Produit de grandes quantités de chaleur. Bac à sable uniquement.
 
 #Erekir
 block.empty.name = Vide
