--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -2297,8 +2297,8 @@ lst.packcolor = Compresse les composants RGBA [0, 1] en un seul nombre pour les 
 lst.setrule = Change une règle du jeu.
 lst.flushmessage = Affiche un message sur l'écran depuis la mémoire tampon de texte.\nAttendra la fin du message précédent avant l'affichage du nouveau.
 lst.cutscene = Manipule la caméra du joueur.
-lst.setflag = Définit une variable global qui peut être lu par tous les processeurs.
-lst.getflag = Vérifie si une variable global est présent.
+lst.setflag = Définit une variable globale qui peut être lue par tous les processeurs.
+lst.getflag = Vérifie si une variable globale est présente.
 lst.setprop = Change une propriété d'une unité ou d'un bâtiment.
 lst.effect = Crée un effet de particules.
 lst.sync = Synchronise une variable dans le réseau.\nLimité à 20 fois par seconde et par variable.
