--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -2330,7 +2330,7 @@ lcategory.block.description = Interagit avec les blocs.
 lcategory.operation = Opérations
 lcategory.operation.description = Opérations logiques.
 lcategory.control = Contrôle des Flux
-lcategory.control.description = Manipule les ordres d'exécution.
+lcategory.control.description = Manipule l'ordre d'exécution.
 lcategory.unit = Contrôle des Unités
 lcategory.unit.description = Ordonne des commandes aux unités.
 lcategory.world = Contrôle du Monde
