--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -1274,7 +1274,7 @@ rules.rtsminsquadsize = Taille Minimale d'une Escouade
 rules.rtsmaxsquadsize = Taille Maximale d'une Escouade
 rules.rtsminattackweight = Poids Minimum d'une Attaque
 rules.cleanupdeadteams = Détruire les structures des équipes vaincues (JcJ)
-rules.corecapture = Capture du Noyau lors de sa destruction
+rules.corecapture = Capture du Noyau lors de sa Destruction
 rules.polygoncoreprotection = Protection polygonale du Noyau
 rules.placerangecheck = Vérification de la Portée de Placement
 rules.enemyCheat = Ressources infinies pour l'IA (équipe rouge)
