--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -1832,7 +1832,7 @@ hint.depositItems = Pour déposer des ressources dans le Noyau, déplacez-les de
 hint.respawn = Pour réapparaître en tant que vaisseau, pressez [accent][[V][].
 hint.respawn.mobile = Vous avez pris le contrôle d'une unité/structure. Pour réapparaître en tant qu'unité de base, [accent]touchez l'avatar en haut à gauche.[]
 hint.desktopPause = Pressez [accent][[Espace][] pour mettre en pause et reprendre le jeu.
-hint.breaking = Maintenez [accent][[Clic-droit][] pour détruire des blocs.
+hint.breaking = Maintenez [accent]Clic-droit[] pour détruire des blocs.
 hint.breaking.mobile = Activez le \ue817 [accent]marteau[] en bas à droite, Touchez pour détruire des blocs.\n\nRetenez votre doigt pendant une seconde et déplacez-le pour détruire les blocs dans la zone de sélection.
 hint.blockInfo = Pour afficher les informations relatives à un bloc, il suffit de le sélectionner dans le [accent]menu de construction[], puis de cliquer sur le bouton [accent][[?][] à droite.
 hint.derelict = [accent]Les structures abandonnées[] sont des vestiges brisés d'anciennes bases qui ne fonctionnent plus. Ces structures peuvent être [accent]déconstruites pour obtenir des ressources.
