--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -1287,7 +1287,7 @@ rules.unitdamagemultiplier = Multiplicateur de Dégât des Unités
 rules.unitcrashdamagemultiplier = Multiplicateur de Dégât de chute des Unités
 rules.solarmultiplier = Multiplicateur de l'Efficacité des Panneaux Solaires
 rules.unitcapvariable = Les Noyaux contribuent à la limite d'Unités actives
-rules.unitcap = Limite d'Unités actives de base
+rules.unitcap = Limite initiale d'Unités actives
 rules.limitarea = Limite de la zone de jeu de la Carte
 rules.enemycorebuildradius = Périmètre Non-Constructible autour du Noyau ennemi :[lightgray] (blocs)
 rules.wavespacing = Temps entre les Vagues :[lightgray] (sec)
