--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -1861,8 +1861,8 @@ hint.coreUpgrade = Les Noyaux peuvent être améliorés [accent]en plaçant un N
 hint.presetLaunch = Les [accent]secteurs[] gris, tels que [accent]Frozen Forest[], peuvent être lancés de n'importe où. Ils ne requièrent pas la capture d'un secteur adjacent.\n\n[accent]Il y a beaucoup de secteurs[] comme celui-ci, qui sont [accent]optionnels[].
 hint.presetDifficulty = Ce secteur a un niveau de menace ennemi [scarlet]élevé[].\nIl n'est [accent]pas recommandé[] de se lancer dans de tels secteurs sans la technologie et la préparation appropriées.
 hint.coreIncinerate = Lorsqu'un Noyau est rempli d'une ressource en particulier, le surplus qui y rentrera sera [accent]incinéré[].
-hint.factoryControl = Pour régler la [accent]destination[] d'une usine à unités, cliquez sur l'usine en mode « Commande », puis [accent][[Clic-droit][] sur la destination souhaitée.\nLes unités produites s'y déplaceront automatiquement.
-hint.factoryControl.mobile = Pour régler la [accent]destination[] d'une usine à unités, tapez sur l'usine en mode « Commande », puis [accent]Tapez[] sur la destination souhaitée.\nLes unités produites s'y déplaceront automatiquement.
+hint.factoryControl = Pour régler la [accent]destination[] d'une usine à unités, cliquez sur l'usine en mode « Commande », puis clic-droit sur la destination souhaitée.\nLes unités produites s'y déplaceront automatiquement.
+hint.factoryControl.mobile = Pour régler la [accent]destination[] d'une usine à unités, tapez sur l'usine en mode « Commande », puis tapez sur la destination souhaitée.\nLes unités produites s'y déplaceront automatiquement.
 
 gz.mine = Déplacez-vous près du \uf8c4 [accent]minerai de cuivre[] sur le sol et [accent]Cliquez[] pour commencer à miner.
 gz.mine.mobile = Déplacez-vous près du \uf8c4 [accent]minerai de cuivre[] sur le sol et [accent]Tapez[] dessus pour commencer à miner.
