--- a/core/assets/bundles/bundle_fr.properties
+++ b/core/assets/bundles/bundle_fr.properties
@@ -1864,11 +1864,11 @@ hint.coreIncinerate = Lorsqu'un Noyau est rempli d'une ressource en particulier,
 hint.factoryControl = Pour régler la [accent]destination[] d'une usine à unités, cliquez sur l'usine en mode « Commande », puis clic-droit sur la destination souhaitée.\nLes unités produites s'y déplaceront automatiquement.
 hint.factoryControl.mobile = Pour régler la [accent]destination[] d'une usine à unités, tapez sur l'usine en mode « Commande », puis tapez sur la destination souhaitée.\nLes unités produites s'y déplaceront automatiquement.
 
-gz.mine = Déplacez-vous près du \uf8c4 [accent]minerai de cuivre[] sur le sol et [accent]Cliquez[] pour commencer à miner.
-gz.mine.mobile = Déplacez-vous près du \uf8c4 [accent]minerai de cuivre[] sur le sol et [accent]Tapez[] dessus pour commencer à miner.
-gz.research = Ouvrez \ue875 l'Arbre technologique.\nRecherchez la \uf870 [accent]Foreuse méchanique[], ensuite sélectionnez-la dans le menu en bas à droite.\n[accent]Cliquez[] sur le filon de cuivre pour la placer.
-gz.research.mobile = Ouvrez \ue875 l'Arbre technologique.\nRecherchez la \uf870 [accent]Foreuse méchanique[], ensuite sélectionnez-la dans le menu en bas à droite.\n[accent]Tapez[] sur le filon de cuivre pour la placer.\n\nPressez la \ue800 [accent]coche[] en bas à droite pour confirmer.
-gz.conveyors = Recherchez et placez des \uf896 [accent]convoyeurs[] pour déplacer les resources minées par vos\nforeuses vers le noyau.\n\n[accent]Cliquez et retenez[] pour placer plusieurs convoyeurs.\n[accent]Scrollez[] pour les faire pivoter.
+gz.mine = Déplacez-vous près du \uf8c4 [accent]minerai de cuivre[] sur le sol et cliquez pour commencer à miner.
+gz.mine.mobile = Déplacez-vous près du \uf8c4 [accent]minerai de cuivre[] sur le sol et Tapez dessus pour commencer à miner.
+gz.research = Ouvrez \ue875 l'Arbre technologique.\nRecherchez la \uf870 [accent]Foreuse méchanique[], ensuite sélectionnez-la dans le menu en bas à droite.\nCliquez sur le filon de cuivre pour la placer.
+gz.research.mobile = Ouvrez \ue875 l'Arbre technologique.\nRecherchez la \uf870 [accent]Foreuse méchanique[], ensuite sélectionnez-la dans le menu en bas à droite.\nTapez sur le filon de cuivre pour la placer.\n\nPressez la \ue800 [accent]coche[] en bas à droite pour confirmer.
+gz.conveyors = Recherchez et placez des \uf896 [accent]convoyeurs[] pour déplacer les resources minées par vos\nforeuses vers le noyau.\n\nCliquez et retenez pour placer plusieurs convoyeurs.\n[accent]Scrollez[] pour les faire pivoter.
 gz.conveyors.mobile = Recherchez et placez des \uf896 [accent]convoyeurs[] pour déplacer les resources minées par vos\nforeuses vers le noyau.\n\nRetenez pendant une seconde et faites glisser pour placer plusieurs convoyeurs.
 gz.drills = Étendez vos exploitations minières.\nPlacez plus de Foreuses méchaniques.\nMinez 100 minerais de cuivre.
 gz.lead = \uf837 Le [accent]Plomb[] est un autre minerai assez utilisé en tant que ressource.\nConstruisez des foreuses pour miner du plomb.
